# morpheus-scvmm-plugin

./: NOTICE  README.md  SimpleTest.java  build.gradle  gradle.properties  run_tests.sh
.github/workflows/: ci-oidc-debugger.yml  ci.yml
config/codenarc/: codenarc.groovy
functional_tests/: .env  README.md  conftest.py  constants.py  create_pip_conf.sh  install_dependencies.sh  pyproject.toml  pytest.ini  requirements.txt
functional_tests/common/: cloud_helper.py  common_utils.py  create_payloads.py  scvmm_utils.py
functional_tests/common/configs/: config_reader.py  morpheus_settings.py
functional_tests/common/resources/: testcase_variable_data.json
functional_tests/common/secrets/: update_secrets.py
functional_tests/tests/: conftest.py  test_instance_creation_scenario.py
src/main/groovy/com/morpheusdata/scvmm/: ScvmmApiService.groovy  ScvmmBackupExecutionProvider.groovy  ScvmmBackupProvider.groovy  ScvmmBackupRestoreProvider.groovy  ScvmmBackupTypeProvider.groovy  ScvmmCloudProvider.groovy  ScvmmNetworkPoolProvider.groovy  ScvmmOptionSourceProvider.groovy  ScvmmPlugin.groovy  ScvmmProvisionProvider.groovy
src/main/groovy/com/morpheusdata/scvmm/common/: Constants.groovy
src/main/groovy/com/morpheusdata/scvmm/logging/: SlowLogger.groovy
src/main/groovy/com/morpheusdata/scvmm/sync/: CloudCapabilityProfilesSync.groovy  ClustersSync.groovy  DatastoresSync.groovy  HostSync.groovy  IpPoolsSync.groovy  IsolationNetworkSync.groovy  NetworkSync.groovy  TemplatesSync.groovy  (+2 more)
src/main/resources/scribe/: scvmm-instance-type-layout-and-scale-action.scribe  scvmm-instance-type.scribe  scvmm-virtual-images.scribe  scvmm-workload-type-and-set.scribe
src/test/groovy/com/morpheusdata/scvmm/: ScvmmApiServiceSpec.groovy  ScvmmBackupExecutionProviderSpec.groovy  ScvmmBackupProviderSpec.groovy  ScvmmBackupRestoreProviderSpec.groovy  ScvmmBackupTypeProviderSpec.groovy  ScvmmCloudProviderSpec.groovy  ScvmmOptionSourceProviderSpec.groovy  ScvmmPluginSpec.groovy  ScvmmProvisionProviderRunWorkloadSpec.groovy  ScvmmProvisionProviderSpec.groovy
(+20 files in other folders)
