[tool.poetry]
name = "morpheus-ibm-cloud"
version = "2.0.0"
description = "ibm_cloud_plugin repo"
authors = ["HPE Morpheus Team"]
package-mode = false

[[tool.poetry.source]]
name = "jfrog"
url = "https://aruba.jfrog.io/aruba/api/pypi/pypi-local/simple/"
priority = "supplemental"

[tool.poetry.dependencies]
pytest-html = "^3.2.0"
python = "^3.10"
pytest = "^8.3.4"
allure-pytest = "^2.13.5"
requests = "^2.32.3"
allure-python-commons = "^2.13.5"
pytest-ordering = "^0.6"
google-api-python-client = "^1.12.8"
google-auth-httplib2 = "^0.0.4"
google-auth-oauthlib = "^0.4.2"
oauth2client = "^3.0.0"
google-api-core = "^1.23.0"
google-auth = "^1.23.0"
googleapis-common-protos = "^1.52.0"
httpx = "^0.23.2"
boto3 = "^1.26.42"
requests-oauthlib = "^1.3.0"
webdriver-manager = "^3.2.2"
names = "^0.3.0"
oauthlib = "3.2.2"
bs4 = "^0.0.1"
lxml = "^5.3.0"
urllib3 = "^2.3.0"
okta = "^2.2.0"
pyotp = "^2.2.6"
jsonpath-ng = "^1.6.0"
office365-rest-python-client = "^2.4.3"

atlassian-python-api = "^3.41.19"
pyvim = "^3.0.3"
pyvmomi = "^8.0.2.0.1"
scikit-learn = "^1.6.1"
nltk = "^3.9.1"
hpe-pc-automation-lib = "^2.61.0"
hpe_morpheus_automation_libs = "8.0.7.dev29+custom"
hpe-glcp-automation-lib = "2.1922.0"
pytest-check = "^2.3.1"
pytest-rerunfailures = "^14.0"
pytest-dependency = "^0.6.0"
pytest-xdist = "^3.6.1"

[tool.poetry.dev-dependencies]
autoflake = "^2.3.1"
sqlalchemy-stubs = "^0.3"
flake8 = "^7.1.0"
black = "^25.1.0"
isort = "^6.0.0"
requests-mock = "^1.8.0"
mock = "^4.0.2"
wily = "^1.19.0"
pylint = "^3.3.3"

[tool.poetry.scripts]
run = 'scripts.run:start'
lint = 'scripts.run:lint'
fix-lint = 'scripts.run:fix_lint'
test = 'scripts.run:test'
format-imports = 'scripts.run:format_imports'
cov = 'scripts.run:test_cov_html'
ci = 'scripts.run:run_ci'

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 90

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"